fixed alignment issues and responsiveness issues

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -7,15 +7,25 @@
     .row {padding:0 2%}
 
 }
+h1{ font-size: 35px;}
+h2{font-size: 27px;}
+h3{font-size: 25px;}
+body{font-size: 20px;}
+.logo {
+    height: 100px;
+    width: auto;
+    float:left;
+    margin-top: 20px;
+}
 
 /* small tablet to big table:from 678 to 1023px*/
 @media only screen and (max-width: 1023px)
 {
-    body{font-size: 18px;}
+    body{font-size: 20px;}
     section { padding: 60px 0;}
     .long-copy {
         width: 80%;
-        margin-left:10%;
+        margin-left:0%;
     }
 
     .steps-box{ margin-top:10px;}
@@ -37,18 +47,30 @@
     }
     
     .contact-form {width:80%;}
-}
+
+    h1{ font-size: 32px;}
+    h2{font-size: 25px;}
+    }
+.logo {
+    height: 90px;
+    width: auto;
+    float:left;
+    margin-top: 20px;
+    } 
+    .hero-text-box{
+    top:40%;
+} 
 /*Small phones to small tablet:from 481 to 767px*/
 @media only screen and (max-width: 767px){
 
-    body {font-size: 16px;}
+    body {font-size: 20px;}
     section {padding:30px 0;}
 
     .row,
     .hero-text-box {padding:0 4%;}
     .col {width:100%;
     margin:0% 0 4% 0%;
-}
+    }
 
     .main-nav {display:none;}  
     .mobile-nav-icon {display: inline-block;} 
@@ -80,8 +102,8 @@
     .sticky .mobile-nav-icon i {color:rgb(10, 10, 10);}
     .sticky .mobile-nav-icon {margin-top: 10px;}
     
-    h1{ font-size: 180%;}
-    h1{ font-size: 150%;}
+    
+    
 
      .long-copy {
         width: 100%;
@@ -102,11 +124,123 @@
 
      .works-steps{ margin-bottom:20px;}
      .works-steps:last-of-type{ margin-bottom: 20px;}
-    
-}
+     .meal-showcase li {
+        display: inline-flex;
+        float: left;
+        width: 50%;
+    }
+    header{
+        height: 80vh;
+    }
+    .logo {
+        height: 80px;
+        width: auto;
+        float:left;
+        margin-top: 20px;
+       }
+    .hero-text-box{
+    top:50%;
+    }
+    .btn-app img{
+        align-content: center;
+        height: 30px; 
+        margin-left: 80px; 
+    }
 
+    .works-steps div{
+        align-items: center;
+        font-size: 130% important;
+         display: block;
+         height: 48%;
+         
+    }
 /*Small phones:from 0 to 480px*/
 @media only screen and (max-width: 480px){
+    body{font-size: 14px;}
     section {padding:25px 0;}
     .contact-form{width:100%;}
+    .meal-showcase li {
+        display: inline-flex;
+        float: left;
+        width: 100%;
+        }
+    header{
+        height: 60vh;
+    }
+    h1,
+    h2,
+    h3{
+    font-weight: 300;
+    text-transform: uppercase;
+    
+    }
+    h1{
+    margin-top: 0;
+    margin-bottom: 20px;
+    color: #fff;
+    font-size: 22px;
+    word-spacing: 4px;
+    letter-spacing: 1px;
+    }
+    h2{
+    font-size: 20px;
+    word-spacing: 2px;
+    letter-spacing: 1px;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: 1px;
+    border-bottom: 1px solid #e67e22;
+    }
+    h3{
+  font-size: 18px;
+  margin-bottom: 15px;  
+
+    }
+
+    h2:after{
+    display: block;
+    height: 2px;
+    background-color: #e67e22;
+    content: " ";
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 30px;
+    }
+    .btn-full,
+    .btn-ghost{
+    }
+    
+    .hero-text-box{
+        top:35%;
+    }
+    .footer-nav{
+
+    }
+    .logo {
+        height: 60px;
+        width: auto;
+        float:left;
+        margin-top: 20px;
+    }
+
+    .btn-app img{
+    align-content: center;  
+    height: 32px; 
+    margin-left: 22px;
+      }
+
+}
+.works-steps div{
+    font-size: 161%;
+}
+.app-screen{
+    margin-left: 8%;
+}
+.footer-nav {
+     
+    display: flex;
+     
+   
+    }
+
 }
